part2/pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: exercise-claim
      containers:
        - name: pong
          image: joonasahovalli/pong:2.0.7
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
