part2/pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pong
  ports:
    - port: 2350
      protocol: TCP
      targetPort: 3001
