part2/pong/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql-stset
  namespace: exercises
spec:
  serviceName: psql-svc
  replicas: 1
  selector:
    matchLabels:
      app: psqlapp
  template:
    metadata:
      labels:
        app: psqlapp
    spec:
      containers:
        - name: psql
          image: postgres:17
          ports:
            - name: psqlport
              containerPort: 5432
          volumeMounts:
            - name: psql-data-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: psql-data-storage
        namespace: exercises
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: psql-svc
  namespace: exercises
  labels:
    app: psqlapp
spec:
  ports:
    - port: 5432
      name: psqlport
  clusterIP: None
  selector:
    app: psqlapp
